; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/minidox/extr_serial.c_serial_read_byte.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/minidox/extr_serial.c_serial_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @serial_read_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @serial_read_byte() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %3 = call i32 (...) @serial_input()
  store i32 0, i32* %2, align 4
  br label %4

4:                                                ; preds = %14, %0
  %5 = load i32, i32* %2, align 4
  %6 = icmp slt i32 %5, 8
  br i1 %6, label %7, label %17

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  %9 = shl i32 %8, 1
  %10 = call i32 (...) @serial_read_pin()
  %11 = or i32 %9, %10
  store i32 %11, i32* %1, align 4
  %12 = call i32 (...) @serial_delay()
  %13 = call i32 @_delay_us(i32 1)
  br label %14

14:                                               ; preds = %7
  %15 = load i32, i32* %2, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %2, align 4
  br label %4

17:                                               ; preds = %4
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @serial_input(...) #1

declare dso_local i32 @serial_read_pin(...) #1

declare dso_local i32 @serial_delay(...) #1

declare dso_local i32 @_delay_us(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
